quantum-game-2/qg2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quantum-game-2
  labels:
    app: quantum-game-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quantum-game-2
  template:
    metadata:
      labels:
        app: quantum-game-2
    spec:
      containers:
      - name: quantum-game-2
        image: spkane/quantum-game-2:latest
        ports:
        - containerPort: 8000
