quantum-game-2/qg2-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: quantum-game-2-service
spec:
  type: NodePort
  ports:
    - targetPort: 8080 #port on the pod 8000
      port: 80 #the service in the node
      nodePort: 30100 #port in the node     
  selector:
    app: quantum-game-2
