quantum-game-2/qg2-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: quantum-game-2-service
spec:
  selector:
    app: quantum-game-2
  ports:
    - port: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quantum-game-2-ingress
spec:
  rules:
  - http:
      paths:
      - path: "/qg2"
        pathType: Prefix
        backend:
          service:
            name: quantum-game-2
            port:
              number: 8000
